--- a/03/index.html
+++ b/03/index.html
@@ -10,7 +10,7 @@
         white-space: nowrap;
         border: 2px solid #000;
       }
-      .ro {
+      .row {
         writing-mode: horizontal-tb;
       }
     </style>
@@ -51,23 +51,14 @@
         <tr>
           <td>Г</td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td>Д</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>Д</td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td>Е</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>Е</td><td></td><td></td><td></td>
         </tr>
-                <tr>
-          <td>Ж</td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr>
+          <td>Ж</td><td></td><td></td><td></td>
         </tr>
         <tr>
           <td>З</td><td></td><td></td><td></td>
