--- a/03/index.html
+++ b/03/index.html
@@ -36,7 +36,8 @@
     <p>他のラテン文字転写を知りたい場合は<a href="https://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>をご参照していただきたいです</p>
     <table>
       <tbody>
-        <tr class="row">
+        <div width="300">
+        <tr>
           <th>&emsp;</th><th>小文字</th><th>大文字</th><th>ラテン文字転写</th>
         </tr>
         <tr>
@@ -138,6 +139,7 @@
         <tr>
           <td>Я</td><td></td><td></td><td></td>
         </tr>
+        </div>
       </tbody>
     </table>
   </body>
