--- a/03/index.html
+++ b/03/index.html
@@ -10,8 +10,8 @@
         white-space: nowrap;
         border: 2px solid #000;
       }
-      .row {
-        writing-mode: horizontal-tb;
+      #all_table {
+        width: 300px
       }
     </style>
   </head>
@@ -36,7 +36,7 @@
     <p>他のラテン文字転写を知りたい場合は<a href="https://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>をご参照していただきたいです</p>
     <table>
       <tbody>
-        <div width="300">
+        <div id="all_table">
         <tr>
           <th>&emsp;</th><th>小文字</th><th>大文字</th><th>ラテン文字転写</th>
         </tr>
