--- a/03/index.html
+++ b/03/index.html
@@ -10,7 +10,7 @@
         white-space: nowrap;
         border: 2px solid #000;
       }
-      #all_table {
+      #all_table th{
         height: 300px
       }
     </style>
