--- a/03/index.html
+++ b/03/index.html
@@ -37,8 +37,8 @@
     <table>
       <thead>
         <div id="all_table">
-        <tr style="display:table-cell;width:800%">
-          <th>&emsp;</th><th>小文字</th><th>大文字</th><th>ラテン文字転写</th>
+        <tr">
+          <th style="width=300px">&emsp;</th><th style="width=300px">小文字</th><th style="width=300px">大文字</th><th style="width=300px">ラテン文字転写</th>
         </tr>
       </thead>
       <tbody>
