--- a/03/index.html
+++ b/03/index.html
@@ -29,7 +29,10 @@
     <p>他のラテン文字転写を知りたい場合は<a href="https://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>をご参照していただきたいです</p>
     <table border="1">
         <tr>
-          <th>&emsp;</th><th>小文字</th><th>大文字</th><th>ラテン文字転写</th>
+          <th>&emsp;</th>
+          <th>小文字</th>
+          <th>大文字</th>
+          <th>ラテン文字転写</th>
         </tr>
         <tr>
           <td>А</td><td></td><td></td><td></td>
