--- a/03/index.html
+++ b/03/index.html
@@ -25,7 +25,7 @@
     <p>※ロシア語で使用されているキリル文字をまとめた記事となっています</p>
     <p>  他の言語で使用されているキリル文字も知りたい場合には<a href="http://ja.wikipedia.org/wiki/キリル文字一覧">Wikipedia「キリル文字一覧」</a>をご参照していただきたいです</p>
     <h1 id="b">一覧表</h1>
-    <p>※下の表でのラテン文字転写は<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>の変換表のISO/R:1968をラテン文字転写とさせていただきます</p>
+    <p>※下の表でのラテン文字転写は<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>の変換表のISO/R 9:1968をラテン文字転写とさせていただきます</p>
     <p>他のラテン文字転写を知りたい場合は<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>をご参照していただきたいです</p>
     <table border="1" style="width: 100%;text-align:center;">
         <tr>
@@ -35,103 +35,103 @@
           <th style="width: 27%;">ラテン文字転写</th>
         </tr>
         <tr>
-          <td>А</td><td></td><td></td><td></td>
+          <td>А</td><td></td><td></td><td>A</td>
         </tr>
         <tr>
-          <td>Б</td><td></td><td></td><td></td>
+          <td>Б</td><td></td><td></td><td>B</td>
         </tr>
         <tr>
-          <td>В</td><td></td><td></td><td></td>
+          <td>В</td><td></td><td></td><td>V</td>
         </tr>
         <tr>
-          <td>Г</td><td></td><td></td><td></td>
+          <td>Г</td><td></td><td></td><td>G</td>
         </tr>
         <tr>
-          <td>Д</td><td></td><td></td><td></td>
+          <td>Д</td><td></td><td></td><td>D</td>
         </tr>
         <tr>
-          <td>Е</td><td></td><td></td><td></td>
+          <td>Е</td><td></td><td></td><td>E</td>
         </tr>
         <tr>
-          <td>Ё</td><td></td><td></td><td></td>
+          <td>Ё</td><td></td><td></td><td>Ë</td>
         </tr>
         <tr>
-          <td>Ж</td><td></td><td></td><td></td>
+          <td>Ж</td><td></td><td></td><td>Ž</td>
         </tr>
         <tr>
-          <td>З</td><td></td><td></td><td></td>
+          <td>З</td><td></td><td></td><td>Z</td>
         </tr>
         <tr>
-          <td>И</td><td></td><td></td><td></td>
+          <td>И</td><td></td><td></td><td>I</td>
         </tr>
         <tr>
-          <td>Й</td><td></td><td></td><td></td>
+          <td>Й</td><td></td><td></td><td>J</td>
         </tr>
         <tr>
-          <td>К</td><td></td><td></td><td></td>
+          <td>К</td><td></td><td></td><td>K</td>
         </tr>
         <tr>
-          <td>Л</td><td></td><td></td><td></td>
+          <td>Л</td><td></td><td></td><td>L</td>
         </tr>
         <tr>
-          <td>М</td><td></td><td></td><td></td>
+          <td>М</td><td></td><td></td><td>M</td>
         </tr>
         <tr>
-          <td>Н</td><td></td><td></td><td></td>
+          <td>Н</td><td></td><td></td><td>N</td>
         </tr>
         <tr>
-          <td>О</td><td></td><td></td><td></td>
+          <td>О</td><td></td><td></td><td>O</td>
         </tr>
         <tr>
-          <td>П</td><td></td><td></td><td></td>
+          <td>П</td><td></td><td></td><td>P</td>
         </tr>
         <tr>
-          <td>Р</td><td></td><td></td><td></td>
+          <td>Р</td><td></td><td></td><td>R</td>
         </tr>
         <tr>
-          <td>С</td><td></td><td></td><td></td>
+          <td>С</td><td></td><td></td><td>S</td>
         </tr>
         <tr>
-          <td>Т</td><td></td><td></td><td></td>
+          <td>Т</td><td></td><td></td><td>T</td>
         </tr>
         <tr>
-          <td>У</td><td></td><td></td><td></td>
+          <td>У</td><td></td><td></td><td>U</td>
         </tr>
         <tr>
-          <td>Ф</td><td></td><td></td><td></td>
+          <td>Ф</td><td></td><td></td><td>F</td>
         </tr>
         <tr>
-          <td>Х</td><td></td><td></td><td></td>
+          <td>Х</td><td></td><td></td><td>CH</td>
         </tr>
         <tr>
-          <td>Ц</td><td></td><td></td><td></td>
+          <td>Ц</td><td></td><td></td><td>C</td>
         </tr>
         <tr>
-          <td>Ч</td><td></td><td></td><td></td>
+          <td>Ч</td><td></td><td></td><td>&#x10C;</td>
         </tr>
         <tr>
-          <td>Ш</td><td></td><td></td><td></td>
+          <td>Ш</td><td></td><td></td><td>&Scaron;</td>
         </tr>
         <tr>
-          <td>Щ</td><td></td><td></td><td></td>
+          <td>Щ</td><td></td><td></td><td>&Scaron;&Ccaron;</td>
         </tr>
         <tr>
-          <td>Ъ</td><td></td><td></td><td></td>
+          <td>Ъ</td><td></td><td></td><td>ʺ</td>
         </tr>
         <tr>
-          <td>Ы</td><td></td><td></td><td></td>
+          <td>Ы</td><td></td><td></td><td>Y</td>
         </tr>
         <tr>
-          <td>Ь</td><td></td><td></td><td></td>
+          <td>Ь</td><td></td><td></td><td>ʹ</td>
         </tr>
         <tr>
-          <td>Э</td><td></td><td></td><td></td>
+          <td>Э</td><td></td><td></td><td>&#x116;</td>
         </tr>
         <tr>
-          <td>Ю</td><td></td><td></td><td></td>
+          <td>Ю</td><td></td><td></td><td>ju</td>
         </tr>
         <tr>
-          <td>Я</td><td></td><td></td><td></td>
+          <td>Я</td><td></td><td></td><td>ja</td>
         </tr>
     </table>
   </body>
